[gd_scene load_steps=3 format=2]

[ext_resource path="res://recursos/jogos/enchente/controlador_arrasta/ControladorArrasta.gd" type="Script" id=1]
[ext_resource path="res://addons/controle_de_toque/controle_toque.gd" type="Script" id=2]

[node name="ControladorArrasta" type="Node2D"]
script = ExtResource( 1 )

[node name="ControleDeToque" type="Node" parent="."]
script = ExtResource( 2 )
tamanho_array = 5

[connection signal="arrastar_realizado" from="ControleDeToque" to="." method="_on_ControleDeToque_arrastar_realizado"]
[connection signal="toque_desfeito" from="ControleDeToque" to="." method="_on_ControleDeToque_toque_desfeito"]
